--- a/package.json
+++ b/package.json
@@ -8,21 +8,28 @@
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
+    "autoprefixer": "^10.4.14",
+    "babel-cli": "^6.26.0",
     "babelify": "^10.0.0",
     "browserify": "^16.5.2",
     "core-js": "^3.22.4",
+    "hugo-extended": "^0.111.3",
     "husky": "^7.0.0",
+    "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
     "segmentit": "^2.0.3"
   },
   "scripts": {
+    "hugo": "hugo",
     "preinstall": "npx npm-force-resolutions",
+    "build:preview": "hugo --baseURL \"${DEPLOY_PRIME_URL:-/}\" --buildDrafts --buildFuture",
     "babel": "npx babel src/js --out-file assets/js/theme.js",
-    "build": "npm run babel && hugo -v --source=exampleSite --themesDir ../.. --gc",
+    "build": "npm run hugo -v --source=LoveIt --themesDir ../.. --gc",
     "build-lunr-segmentit": "browserify src/lib/lunr/lunr.segmentit.js -o assets/lib/lunr/lunr.segmentit.js -t babelify --presets @babel/preset-env",
-    "start": "npm run babel && hugo server --source=exampleSite --themesDir ../.. -D --disableFastRender",
-    "start-production": "npm run babel && hugo server --source=exampleSite --themesDir ../.. -D --disableFastRender -e production",
-    "check": "htmlproofer exampleSite/public --check-html --allow-hash-href --empty-alt-ignore --disable-external",
-    "copy": "rm -rf resources && cp -rf exampleSite/resources resources",
+    "start": "npm run hugo server --source=LoveIt --themesDir ../.. -D --disableFastRender",
+    "start-production": "npm run hugo server --source=LoveIt --themesDir ../.. -D --disableFastRender -e production",
+    "check": "htmlproofer LoveIt/public --check-html --allow-hash-href --empty-alt-ignore --disable-external",
+    "copy": "rm -rf resources && cp -rf LoveIt/resources resources",
     "prepare": "husky install"
   },
   "repository": {
@@ -38,5 +45,8 @@
   "bugs": {
     "url": "https://github.com/dillonzq/LoveIt/issues"
   },
-  "homepage": "https://github.com/dillonzq/LoveIt#readme"
+  "homepage": "https://github.com/dillonzq/LoveIt#readme",
+  "dependencies": {
+    "hugo": "^0.0.3"
+  }
 }
