--- a/config.toml
+++ b/config.toml
@@ -459,7 +459,7 @@ numPosts = 10
 appId = ""
 # automatically adapt the current theme i18n configuration when empty
 # 为空时自动适配当前主题 i18n 配置
-languageCode = "en"
+languageCode = "en-us"
 
 # Telegram comments config (https://comments.app/)
 # Telegram comments 评论系统设置 (https://comments.app/)
@@ -637,3 +637,52 @@ polyfill = false
 # whether to use object-fit-images to be compatible with older browsers
 # 是否使用 object-fit-images 来兼容旧式浏览器
 objectFit = false
+
+# Author config
+[author]
+name = "Mikko"
+email = ""
+link = ""
+
+# Menu config
+[menu]
+
+[[menu.main]]
+weight = 1
+identifier = "posts"
+# you can add extra information before the name (HTML format is supported), such as icons
+pre = ""
+# you can add extra information after the name (HTML format is supported), such as icons
+post = ""
+name = "Posts"
+url = "/posts/"
+# title will be shown when you hover on this menu link
+title = ""
+
+[[menu.main]]
+weight = 2
+identifier = "tags"
+pre = ""
+post = ""
+name = "Tags"
+url = "/tags/"
+title = ""
+
+[[menu.main]]
+weight = 3
+identifier = "categories"
+pre = ""
+post = ""
+name = "Categories"
+url = "/categories/"
+title = ""
+
+# Markup related configuration in Hugo
+[markup]
+
+# Syntax Highlighting (https://gohugo.io/content-management/syntax-highlighting)
+[markup.highlight]
+# false is a necessary configuration (https://github.com/dillonzq/LoveIt/issues/158)
+noClasses = false
+# Change the default theme to be use when building the site with Hugo
+theme = "LoveIt"
