--- a/package.json
+++ b/package.json
@@ -20,16 +20,14 @@
     "segmentit": "^2.0.3"
   },
   "scripts": {
-    "hugo": "hugo",
     "preinstall": "npx npm-force-resolutions",
-    "build:preview": "hugo --baseURL \"${DEPLOY_PRIME_URL:-/}\" --buildDrafts --buildFuture",
     "babel": "npx babel src/js --out-file assets/js/theme.js",
-    "build": "npm run hugo -v --source=LoveIt --themesDir ../.. --gc",
+    "build": "npm run babel && hugo -v --source=exampleSite --themesDir ../.. --gc",
     "build-lunr-segmentit": "browserify src/lib/lunr/lunr.segmentit.js -o assets/lib/lunr/lunr.segmentit.js -t babelify --presets @babel/preset-env",
-    "start": "npm run hugo server --source=LoveIt --themesDir ../.. -D --disableFastRender",
-    "start-production": "npm run hugo server --source=LoveIt --themesDir ../.. -D --disableFastRender -e production",
-    "check": "htmlproofer LoveIt/public --check-html --allow-hash-href --empty-alt-ignore --disable-external",
-    "copy": "rm -rf resources && cp -rf LoveIt/resources resources",
+    "start": "npm run babel && hugo server --source=exampleSite --themesDir ../.. -D --disableFastRender",
+    "start-production": "npm run babel && hugo server --source=exampleSite --themesDir ../.. -D --disableFastRender -e production",
+    "check": "htmlproofer exampleSite/public --check-html --allow-hash-href --empty-alt-ignore --disable-external",
+    "copy": "rm -rf resources && cp -rf exampleSite/resources resources",
     "prepare": "husky install"
   },
   "repository": {
