--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
     "babel": "npx babel src/js --out-file assets/js/theme.js",
-    "build": "npm run babel && hugo -v --source=exampleSite --themesDir ../.. --gc",
+    "build": "npm run babel && hugo -v --source=. --themesDir ../.. --gc",
     "build-lunr-segmentit": "browserify src/lib/lunr/lunr.segmentit.js -o assets/lib/lunr/lunr.segmentit.js -t babelify --presets @babel/preset-env",
-    "start": "npm run babel && hugo server --source=exampleSite --themesDir ../.. -D --disableFastRender",
-    "start-production": "npm run babel && hugo server --source=exampleSite --themesDir ../.. -D --disableFastRender -e production",
-    "check": "htmlproofer exampleSite/public --check-html --allow-hash-href --empty-alt-ignore --disable-external",
-    "copy": "rm -rf resources && cp -rf exampleSite/resources resources",
+    "start": "npm run babel && hugo server --source=. --themesDir ../.. -D --disableFastRender",
+    "start-production": "npm run babel && hugo server --source=. --themesDir ../.. -D --disableFastRender -e production",
+    "check": "htmlproofer ./public --check-html --allow-hash-href --empty-alt-ignore --disable-external",
+    "copy": "rm -rf resources && cp -rf ./resources resources",
     "prepare": "husky install"
   },
   "repository": {
