Synced by Front Matter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,5 @@
         "editor.quickSuggestions": false,
         "editor.minimap.enabled": false
     },
-    "frontMatter.content.autoUpdateDate": false
+    "frontMatter.content.autoUpdateDate": true
 }
